# omarchy-studio

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  install.sh  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/omarchy-studio/: Cargo.toml
crates/omarchy-studio/src/: main.rs
crates/omarchy-studio/src/tui/: chord.rs  imagecell.rs  logo.rs  mod.rs  theme.rs  ui.rs
crates/omarchy-studio/src/tui/screens/: animations.rs  apps.rs  battery.rs  community.rs  doctor.rs  integrations.rs  keybinds.rs  lockidle.rs  looknfeel.rs  monitors.rs  notifications.rs  nova.rs  onboarding.rs  palette_editor.rs  snapshots.rs  themes.rs  tweaks.rs  wallhaven.rs  wallpapers.rs  waybar.rs  wizard.rs
crates/studio-core/: Cargo.toml
crates/studio-core/data/: integrations.toml
crates/studio-core/src/: cmd.rs  configfs.rs  deps.rs  engine.rs  error.rs  hooks.rs  integration.rs  lib.rs  manifest.rs  modules.rs  omarchy.rs  snapshot.rs
crates/studio-core/src/configfs/: hyprlang.rs  jsonc.rs  mod.rs
crates/studio-core/src/modules/: animations.rs  apps.rs  battery.rs  cheatsheet.rs  color.rs  community.rs  dispatchers.rs  extraction.rs  keybinds.rs  lockidle.rs  looknfeel.rs  mako.rs  monitors.rs  nova.rs  power.rs  rice.rs  swayosd.rs  targets.rs  themes.rs  themesync.rs  toggles.rs  tweaks.rs  update.rs  wallhaven.rs  wallpapers.rs  waybar.rs  wizard.rs
crates/studio-core/tests/: golden.rs
crates/studio-core/tests/fixtures/wallhaven/: search.json
crates/studio-core/tests/fixtures/waybar/: style.css
data/: community-themes.tsv  integrations.toml
data/animation-presets/: omarchy-default.toml  snappy.toml
docs/: PRD.md  comparison.md  handoff-v0.8.md  handoff-v0.9.md
docs/specs/: 00-overview.md  01-architecture.md  02-omarchy-integration.md  03-config-engine.md  04-modules-visual.md  05-modules-behavior.md  06-integrations-deps.md  07-tui-ux.md  08-cli.md  09-testing.md  10-packaging.md
packaging/aur/: .SRCINFO  PKGBUILD  README.md
tools/: capture-readme-media.sh  e2e.sh  fixture.sh  refresh-pkgbuild.sh  refresh-themes.sh  screenshot-grid.sh
tools/termshot/: Cargo.toml
tools/termshot/src/: main.rs
