[workspace]
resolver = "2"
members = ["crates/studio-core", "crates/omarchy-studio"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Ariz <arinopc22@gmail.com>"]
repository = "https://github.com/arino08/omarchy-studio"
homepage = "https://github.com/arino08/omarchy-studio"
rust-version = "1.95"
keywords = ["omarchy", "hyprland", "theming", "tui", "config"]
categories = ["command-line-utilities", "config"]

[workspace.dependencies]
studio-core = { path = "crates/studio-core", version = "0.0.1" }
toml_edit = "0.22"          # lossless TOML (colors.toml, walker/swayosd configs)
ratatui = "0.29"            # TUI framework (crossterm re-exported via ratatui::crossterm)
serde = { version = "1", features = ["derive"] }  # hyprctl -j, wallhaven API
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }  # palette extraction (v0.6)
# Planned dependencies — added per milestone, see docs/specs/01-architecture.md §6:
# clap = "4"                # CLI (v0.1)
# serde / serde_json = "1"  # hyprctl -j, wallhaven API (v0.1)
# thiserror = "2"           # error taxonomy (v0.1)
# jsonc-parser = "0.26"     # waybar config CST (v0.4)
# ratatui-image = "8"       # kitty/sixel previews (v0.6)
# ureq = "2"                # wallhaven client, no async runtime needed (v0.6)
