[package]
name = "omarchy-studio"
description = "One-stop theming cockpit for Omarchy — TUI + CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[[bin]]
name = "omarchy-studio"
path = "src/main.rs"

[dependencies]
studio-core = { workspace = true }
ratatui = { workspace = true }
image = { workspace = true }
ratatui-image = { workspace = true }
serde_json = { workspace = true }   # hyprctl monitors -j (wallhaven `atleast`)
