[package]
name = "studio-core"
description = "Engine for Omarchy Studio: config model, parsers, apply pipeline, snapshots, Omarchy adapter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
toml_edit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
